// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules|lists/list-unordered li-item 1`] = `
<section
  class="story"
>
  <ul
    class="list"
  >
    <li
      class="list__item"
    >
      Abrasion-resistant
    </li>
    <li
      class="list__item"
    >
      Durable
    </li>
    <li
      class="list__item"
    >
      High strength-to-weight ratio
    </li>
    <li
      class="list__item"
    >
      Low friction coefficient
    </li>
  </ul>
   
  <div
    class="vue-portal-target"
  />
</section>
`;

exports[`Storyshots Molecules|lists/list-unordered li-item-card-product 1`] = `
<section
  class="story"
>
  <ul
    class="list"
  >
    <li
      class="list__item"
    >
      <article
        class="card-product"
        type="CardProduct"
      >
        <a
          aria-label="Ultimaker Nylon"
          class="anchor-overlay hit-area"
          href="https://ultimaker.com/en/products/materials/nylon"
          title="Ultimaker Nylon"
        />
         
        <div
          class="card-product__image-container"
        >
          <img
            alt="Nylon 3D printed gears"
            class="img--contain card-product__image img--loading"
            src="https://ultimaker.com/img/materials/carousel/Nylon/Nylon-3D-printed-gears.jpg?w=20"
            type="Image"
          />
           
          <!---->
        </div>
         
        <h3
          class="card-product__heading"
        >
          Ultimaker Nylon
        </h3>
         
        <ul
          class="list card-product__labels-list"
        >
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Abrasion-resistant
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Durable
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              High strength-to-weight ratio
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Low friction coefficient
            </span>
          </li>
        </ul>
      </article>
    </li>
    <li
      class="list__item"
    >
      <article
        class="card-product"
        type="CardProduct"
      >
        <a
          aria-label="Ultimaker Nylon"
          class="anchor-overlay hit-area"
          href="https://ultimaker.com/en/products/materials/nylon"
          title="Ultimaker Nylon"
        />
         
        <div
          class="card-product__image-container"
        >
          <!---->
           
          <div
            class="img--contain card-product__image gray-background"
          >
            Ultimaker Nylon
          </div>
        </div>
         
        <h3
          class="card-product__heading"
        >
          Ultimaker Nylon
        </h3>
         
        <ul
          class="list card-product__labels-list"
        >
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Abrasion-resistant
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Durable
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              High strength-to-weight ratio
            </span>
          </li>
          <li
            class="list__item list__item--inline"
            type="LiInline"
          >
            <span
              class="label"
            >
              Low friction coefficient
            </span>
          </li>
        </ul>
      </article>
    </li>
    <li
      class="list__item"
    >
      <article
        class="card-product"
        type="CardProduct"
      >
        <a
          aria-label="Ultimaker Nylon"
          class="anchor-overlay hit-area"
          href="https://ultimaker.com/en/products/materials/nylon"
          title="Ultimaker Nylon"
        />
         
        <div
          class="card-product__image-container"
        >
          <img
            alt="Nylon 3D printed gears"
            class="img--contain card-product__image img--loading"
            src="https://ultimaker.com/img/materials/carousel/Nylon/Nylon-3D-printed-gears.jpg?w=20"
            type="Image"
          />
           
          <!---->
        </div>
         
        <h3
          class="card-product__heading"
        >
          Ultimaker Nylon
        </h3>
         
        <ul
          class="list card-product__labels-list"
        />
      </article>
    </li>
    <li
      class="list__item"
    >
      <article
        class="card-product"
        type="CardProduct"
      >
        <a
          aria-label="Ultimaker Nylon"
          class="anchor-overlay hit-area"
          href="https://ultimaker.com/en/products/materials/nylon"
          title="Ultimaker Nylon"
        />
         
        <div
          class="card-product__image-container"
        >
          <!---->
           
          <div
            class="img--contain card-product__image gray-background"
          >
            Ultimaker Nylon
          </div>
        </div>
         
        <h3
          class="card-product__heading"
        >
          Ultimaker Nylon
        </h3>
         
        <ul
          class="list card-product__labels-list"
        />
      </article>
    </li>
  </ul>
   
  <div
    class="vue-portal-target"
  />
</section>
`;

exports[`Storyshots Molecules|lists/list-unordered list-item-inline-labels 1`] = `
<section
  class="story"
>
  <ul
    class="list"
  >
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Industrial-grade impact and abrasion resistance
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Durable
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        High strength-to-weight ratio
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Low friction coefficient
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Good corrosion resistance to alkalis and organic chemicals
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Reduced humidity absorption when compared to other Nylon filaments
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Seamless 3D printing experience
      </span>
    </li>
    <li
      class="list__item list__item--inline"
    >
      <span
        class="label"
      >
        Prints in dual extrusion with PVA or Breakaway
      </span>
    </li>
  </ul>
   
  <div
    class="vue-portal-target"
  />
</section>
`;
